-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-08-28	pwessel
	* pstext_func.c:	Stated one needed to use psclip -Ct but it was -Cs
	* psclip.txt:		Fixed old -C syntax in synopsis.
	* gmt_io.c:		The GMT_not_numeric function failed to consider the
				trailing units, e.g., -0.2c.  This tripped up gmtset.

2011-08-27	pwessel
	* gmtselect_func.c:	Did not return to read after finding a table header
	* gmt_support.c:	Reduced the verbosity level of contouring -Gd messages
				to require -V3 as it is too detailed and repetitive for -V2.

-----------------------------------------------------------------------------------------
2011-08-26	pwessel
	GMT 5.0.0b finalized and released.
-----------------------------------------------------------------------------------------

2011-08-26	remko
	* pslib.c:		Made PSL_comment and PSL_command functions instead of macros
				for all platforms
	* gmt_init.c:		Made GMT_message and GMT_report functions instead of macros
				for all platforms

2011-08-25	remko
	* configure.ac:		Fixed bug in finding pkg-config

2011-08-25	pwessel
	* grdtrack_func.c:	Added -N to NOT skip points outside grid domain.

2011-08-24	jluis
	* gmtapi_util.c:	A bit of voodoo programming to make vanish some tests crash on Windows

2011-08-24	pwessel, remko
	* gmtswitch:		Added man page in src, and script moved to src.

2011-08-24	remko
	* gmt_version.c:	Introduced new function GMT_version() to generate version number.
	* *_tests.sh:		Now using graphicsmagick instead of imagemagick for compare.
	
2011-08-23	pwessel
	* guru/install_gmt.sh:	Now offers option to set PCRE libs or disable.
	* gmt_init.c:		New parameter GMT_TRIANGULATE which selects the triangulation
				algorithm to use (Watson or Shewchuk). The latter is only
				available if --enable-triangle was used during configuration.
				
2011-08-20	pwessel